--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "iconoir": "^7.7.0",
     "javascript-time-ago": "^2.5.9",
     "lucide": "^0.364.0",
+    "marked": "^14.1.2",
     "on-build-webpack": "^0.1.0",
     "popper.js": "^1.16.1",
     "postcss-loader": "^8.1.1",
