--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "bramus/router": "^1.6"
+        "bramus/router": "^1.6",
+        "phpmailer/phpmailer": "^6.9"
     }
 }
